added the autonomous robot pathing to Robot.java

--- a/imgui.ini
+++ b/imgui.ini
@@ -29,13 +29,13 @@ Size=796,73
 Collapsed=0
 
 [Window][DIO]
-Pos=494,21
-Size=104,48
+Pos=495,21
+Size=162,123
 Collapsed=0
 
 [Window][Encoders]
 Pos=673,226
-Size=85,48
+Size=231,353
 Collapsed=0
 
 [Window][PWM Outputs]
@@ -67,8 +67,8 @@ Collapsed=0
 width=1346
 height=756
 maximized=0
-xpos=-1
-ypos=-1
+xpos=294
+ypos=101
 userScale=2
 style=0
 disableOutputsOnDS=1
@@ -130,4 +130,10 @@ enabled=1
 
 [DriverStation][Main]
 disable=0
+
+[Encoder][1]
+open=1
+
+[Encoder][3]
+open=1
 
