--- a/imgui.ini
+++ b/imgui.ini
@@ -34,7 +34,7 @@ Size=162,123
 Collapsed=0
 
 [Window][Encoders]
-Pos=673,226
+Pos=493,155
 Size=231,353
 Collapsed=0
 
@@ -63,12 +63,22 @@ Pos=5,157
 Size=135,127
 Collapsed=0
 
+[Window][PDP]
+Pos=315,157
+Size=60,48
+Collapsed=0
+
+[Window][Addressable LEDs]
+Pos=290,100
+Size=136,48
+Collapsed=0
+
 [SimWindow][GLOBAL]
 width=1346
-height=756
+height=750
 maximized=0
-xpos=294
-ypos=101
+xpos=439
+ypos=130
 userScale=2
 style=0
 disableOutputsOnDS=1
@@ -101,7 +111,7 @@ visible=1
 enabled=1
 
 [SimWindow][PDP]
-visible=0
+visible=1
 enabled=1
 
 [SimWindow][PWM Outputs]
@@ -127,6 +137,12 @@ enabled=1
 [SimWindow][Timing]
 visible=1
 enabled=1
+
+[AddressableLED][0]
+columns=10
+serpentine=0
+order=0
+start=0
 
 [DriverStation][Main]
 disable=0
