added more universal dashboard support Note: valid constants must be given to calculate trajectory

--- a/imgui.ini
+++ b/imgui.ini
@@ -34,8 +34,8 @@ Size=162,123
 Collapsed=0
 
 [Window][Encoders]
-Pos=493,155
-Size=231,353
+Pos=642,234
+Size=113,77
 Collapsed=0
 
 [Window][PWM Outputs]
@@ -64,13 +64,18 @@ Size=135,127
 Collapsed=0
 
 [Window][PDP]
-Pos=315,157
-Size=60,48
+Pos=255,162
+Size=233,301
 Collapsed=0
 
 [Window][Addressable LEDs]
 Pos=290,100
 Size=136,48
+Collapsed=0
+
+[Window][RoboRIO]
+Pos=796,188
+Size=119,146
 Collapsed=0
 
 [SimWindow][GLOBAL]
@@ -123,7 +128,7 @@ visible=1
 enabled=1
 
 [SimWindow][RoboRIO]
-visible=0
+visible=1
 enabled=1
 
 [SimWindow][Other Devices]
@@ -148,8 +153,8 @@ start=0
 disable=0
 
 [Encoder][1]
-open=1
+open=0
 
 [Encoder][3]
-open=1
+open=0
 
