added gyro output

--- a/imgui.ini
+++ b/imgui.ini
@@ -30,12 +30,12 @@ Collapsed=0
 
 [Window][DIO]
 Pos=495,21
-Size=162,123
+Size=104,48
 Collapsed=0
 
 [Window][Encoders]
 Pos=642,234
-Size=113,77
+Size=85,48
 Collapsed=0
 
 [Window][PWM Outputs]
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][Timing]
 Pos=5,157
-Size=135,127
+Size=135,104
 Collapsed=0
 
 [Window][PDP]
@@ -151,6 +151,12 @@ start=0
 
 [DriverStation][Main]
 disable=0
+
+[Encoder][0]
+open=0
+
+[Encoder][2]
+open=0
 
 [Encoder][1]
 open=0
